Fix page overflow

--- a/client/src/pages/LoginPage/LoginPage.module.sass
+++ b/client/src/pages/LoginPage/LoginPage.module.sass
@@ -1,3 +1,4 @@
+
 .mainContainer
   background-color: #3ea9f5
   display: flex
@@ -18,6 +19,7 @@
       align-items: center
       justify-content: center
       margin-top: 80px
+      overflow: hidden
 
 
     .headerSignUpPage
